[package]
name = "wifi_scanner"
version = "0.5.2"
authors = ["Brian Vuku <vukubrian@gmail.com>"]
description = "List WiFi hotspots in your area"
repository = "https://github.com/brayo-pip/wifiscanner"
documentation = "https://docs.rs/wifi_scanner"
readme = "README.md"
keywords = ["wifi","hotspots","network"]
license = "Apache-2.0"

[[bin]]
name = "wifiscanner"

[dependencies]
regex = "1"
itertools = "0.10.0"
